--- a/views/about/middle.html
+++ b/views/about/middle.html
@@ -204,6 +204,7 @@
       width: 242px;
       height: 270px;
       margin-right: 28px;
+      float: left;
   }
   .canzan-slide a {
       width: 242px;
@@ -218,6 +219,16 @@
   .kai_con {
       width: 202px;
       height: 40px;
+      background: #c13232;
+      color: #fff;
+      line-height: 20px;
+      position: absolute;
+      bottom: 0px;
+      padding: 20px;
+  }
+  .kai_con_chang {
+      width: 202px;
+      height: auto;
       background: #c13232;
       color: #fff;
       line-height: 20px;
@@ -301,6 +312,61 @@
         <img src="" alt="">
     </div>
 </div>
+<script>
+    $(function () {
+        //轮播图初始化
+        // var mySwiper = new Swiper ('.swiper-container', {
+        //     loop: true,
+        //     nextButton: '.swiper-button-next',
+        //     prevButton: '.swiper-button-prev',
+        //     autoplay : 5000,
+        // });
+    });
+        function onshow(id) {
+            var addEvent = function(element,type,callback){
+            if(element.addEventListener){
+                element.addEventListener(type,callback,false);
+            }else if(element.attachEvent){
+                element.attachEvent('on' + type,callback)
+            }
+            }
+            var canzan_slide = document.getElementsByClassName('canzan-slide');
+            addEvent(canzan_slide,'touchstart',function(){
+                if ($('#kai_con_' + id).css('display') == 'block') {
+                    $("#kai_con_chang_" + id).css("display", "none");
+                }
+                else {
+                    $("#kai_con_chang_" + id).css("display", "block");
+                }
+            });
+            $("#kai_con_chang_" + id).css("display", "block");
+            $("#kai_con_" + id).css("display", "none");
+        }
+        function onhide(id) {
+            var addEvent = function(element,type,callback){
+            if(element.addEventListener){
+                element.addEventListener(type,callback,false);
+            }else if(element.attachEvent){
+                element.attachEvent('on' + type,callback)
+            }
+            }
+            var canzan_slide = document.getElementsByClassName('canzan-slide');
+            addEvent(canzan_slide,'touchstart',function(){
+                if ($('#kai_con_' + id).css('display') == 'block') {
+                    $("#kai_con_chang_" + id).css("display", "none");
+                    $("#kai_con_" + id).css("display", "block");
+                }
+                else {
+                    $("#kai_con_chang_" + id).css("display", "block");
+                    $("#kai_con_" + id).css("display", "none");
+                }
+            });
+            $("#kai_con_chang_" + id).css("display", "none");
+            $("#kai_con_" + id).css("display", "block");
+        }
+    
+    
+    </script>
 <!-- 开设课程 -->
 <div class="dui-layout-lg" style="margin-top: 50px;">
     <div class="kai_title"></div>
@@ -308,7 +374,8 @@
         <a class="arrow-left arrow-btn" href="javacript:void(0);" style="display:block;"></a>
         <a class="arrow-right arrow-btn" href="javacript:void(0);" style="display:block;"></a>
         <div class="swiper-container" style="width:1055px;margin: 0 auto;height:270px;">
-                <div class="swiper-wrapper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide clearfix">
             {% for item in sliderArr %}
                 <div class="swiper-slide canzan-slide" >
                     <a target="_blank"  href="{{ item.linkurl }}"data-pid="{{item.pid}}" class="top-item" style="color: #333333;">
@@ -316,34 +383,40 @@
                     </a>
                 </div>
             {% endfor %}
-                <div class="swiper-slide canzan-slide" >
+                <div class="canzan-slide" onmousemove="onshow('1');" onmouseout="onhide('1');">
                     <a target="_blank"  href="{{ item.linkurl }}"data-pid="{{item.pid}}" class="top-item" style="color: #333333;">
                         <img src="{{ item.imageurl }}" alt="{{ item.alt }}"/>
-                        <div class="kai_con">开设课程开设课程开设课程开设课程开设课程开设课程开设课程</div>
+                        <div id="kai_con_1" class="kai_con" style="display:block;">开设课程开设课程开设课程开设课程开设课程开设课程开设课程</div>
+                        <div id="kai_con_chang_1" class="kai_con_chang" style="display:none;">开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程</div>
                     </a>
                 </div>
-                <div class="swiper-slide canzan-slide" >
-                        <a target="_blank"  href="{{ item.linkurl }}"data-pid="{{item.pid}}" class="top-item" style="color: #333333;">
-                            <img src="{{ item.imageurl }}" alt="{{ item.alt }}"/>
-                            <div class="kai_con">开设课程开设课程开设课程开设课程开设课程开设课程开设课程</div>
-                        </a>
-                    </div>
-                    <div class="swiper-slide canzan-slide" >
-                            <a target="_blank"  href="{{ item.linkurl }}"data-pid="{{item.pid}}" class="top-item" style="color: #333333;">
-                                <img src="{{ item.imageurl }}" alt="{{ item.alt }}"/>
-                                <div class="kai_con">开设课程开设课程开设课程开设课程开设课程开设课程开设课程</div>
-                            </a>
-                        </div>
-                        <div class="swiper-slide canzan-slide" >
-                                <a target="_blank"  href="{{ item.linkurl }}"data-pid="{{item.pid}}" class="top-item" style="color: #333333;">
-                                    <img src="{{ item.imageurl }}" alt="{{ item.alt }}"/>
-                                    <div class="kai_con">开设课程开设课程开设课程开设课程开设课程开设课程开设课程</div>
-                                </a>
-                            </div>
+                <div class="canzan-slide" onmousemove="onshow('2');" onmouseout="onhide('2');">
+                    <a target="_blank"  href="{{ item.linkurl }}"data-pid="{{item.pid}}" class="top-item" style="color: #333333;">
+                        <img src="{{ item.imageurl }}" alt="{{ item.alt }}"/>
+                        <div id="kai_con_2" class="kai_con" style="display:block;">开设课程开设课程开设课程开设课程开设课程开设课程开设课程</div>
+                        <div id="kai_con_chang_2" class="kai_con_chang" style="display:none;">开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程</div>
+                    </a>
                 </div>
+                <div class="canzan-slide" onmousemove="onshow('3');" onmouseout="onhide('3');">
+                    <a target="_blank"  href="{{ item.linkurl }}"data-pid="{{item.pid}}" class="top-item" style="color: #333333;">
+                        <img src="{{ item.imageurl }}" alt="{{ item.alt }}"/>
+                        <div id="kai_con_3" class="kai_con" style="display:block;">开设课程开设课程开设课程开设课程开设课程开设课程开设课程</div>
+                        <div id="kai_con_chang_3" class="kai_con_chang" style="display:none;">开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程</div>
+                    </a>
+                </div>
+                <div class="canzan-slide" style="margin-right: 0px;" onmousemove="onshow('4');" onmouseout="onhide('4');">
+                    <a target="_blank"  href="{{ item.linkurl }}"data-pid="{{item.pid}}" class="top-item" style="color: #333333;">
+                        <img src="{{ item.imageurl }}" alt="{{ item.alt }}"/>
+                        <div id="kai_con_4" class="kai_con" style="display:block;">开设课程开设课程开设课程开设课程开设课程开设课程开设课程</div>
+                        <div id="kai_con_chang_4" class="kai_con_chang" style="display:none;">开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程</div>
+                    </a>
+                </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
+
 <!-- 学费信息 -->
 <div class="dui-layout-lg" style="margin-top: 50px;">
     <div class="clearfix" style="width:1200px;margin: 0 auto;">
@@ -352,12 +425,12 @@
             <div class="xue_con_con">学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息</div>
         </div>
         <div class="xue_con">
-                <div class="xue_con_title2"></div>
-                <div class="xue_con_con">学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息</div>
+            <div class="xue_con_title2"></div>
+            <div class="xue_con_con">学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息</div>
         </div>
         <div class="xue_con" style="margin-right: 0px;">
-                <div class="xue_con_title"></div>
-                <div class="xue_con_con">学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息</div>
+            <div class="xue_con_title"></div>
+            <div class="xue_con_con">学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息学费信息</div>
         </div>
     </div>
 </div>
@@ -411,14 +484,15 @@
 {% include "widget/new_footer/common_footer.html" %}
 {% import "widget/new_slide/new_slide.html" as  slide %}
 {{slide.leyu_slide("XC_SCHOOLTOPIC_SEAT10",helper) }}
-
+<!-- 秋展浮层 -->
+{% include "widget2/active_popup/active_popup.html" %}
 <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
-<script src="{{helper.cdnhost}}/dep/js/schooltopic/index.js"></script>
-<script src="{{helper.cdnhost}}/dep/js/schooltopic/jquery.bxslider.js"></script>
 <script src="{{helper.cdnhost}}/dep/js/schooltopic/Newform123.js"></script>
+<script src="{{helper.cdnhost}}/dep/js/idangerous.swiper-2.7.6-1.js"></script>
+
 </body>
 </html>
